Replaced use of URL with URI